<resources>
    <string name="app_name">SensorData</string>
    <string name="title_activity__sensor">Activity_Sensor</string>
    <string name="error_no_sensor">No sensor</string>
    <string name="label_light">Light Sensor: %1$.2f</string>
    <string name="label_proximity">Proximity Sensor: %1$.2f</string>
    <string name="label_temp">Temperature Sensor: %1$.2f</string>
    <string name="label_humidity">Humidity Sensor: %1$.2f</string>
    <string name="label_pressure">Pressure Sensor: %1$.2f</string>
</resources>
